--- a/the-hunt-2.0/Base.lproj/Main.storyboard
+++ b/the-hunt-2.0/Base.lproj/Main.storyboard
@@ -24,57 +24,52 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dyr-Hl-36I" userLabel="buttons">
                                 <rect key="frame" x="45" y="603" width="285" height="44"/>
                                 <subviews>
-                                    <button opaque="NO" alpha="0.0" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8N2-AP-Roz">
-                                        <rect key="frame" x="0.0" y="0.0" width="90" height="44"/>
-                                        <color key="backgroundColor" red="0.91709250210000004" green="0.19738528129999999" blue="0.85494297740000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8N2-AP-Roz">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="44"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="1us-12-IpG"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="kB5-Fz-kON"/>
+                                            <constraint firstAttribute="width" constant="80" id="UFb-Yr-Omo"/>
+                                            <constraint firstAttribute="height" constant="44" id="yGP-aY-rJK"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="27"/>
-                                        <state key="normal" title="Save">
-                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        </state>
+                                        <state key="normal" image="save"/>
                                         <connections>
                                             <action selector="saveExperience:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LKb-Mk-oWI"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" alpha="0.0" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzG-Do-kC4">
-                                        <rect key="frame" x="195" y="0.0" width="90" height="44"/>
-                                        <color key="backgroundColor" red="0.91709250210000004" green="0.19738528129999999" blue="0.85494297740000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzG-Do-kC4">
+                                        <rect key="frame" x="204" y="0.0" width="81" height="44"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="2jE-IY-aBg"/>
+                                            <constraint firstAttribute="height" constant="44" id="XaC-Nk-a5l"/>
+                                            <constraint firstAttribute="width" constant="81" id="cgt-52-0Q4"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="27"/>
-                                        <state key="normal" title="Load">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
+                                        <state key="normal" image="load"/>
                                         <connections>
                                             <action selector="loadExperience:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WY0-13-AHO"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JwQ-MU-sYs">
-                                        <rect key="frame" x="125" y="7" width="35" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.91709250210000004" green="0.19738528129999999" blue="0.85494297740000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <state key="normal" title="reset">
-                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        </state>
+                                    <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JwQ-MU-sYs">
+                                        <rect key="frame" x="102" y="0.0" width="81" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="81" id="1hY-Ov-YEl"/>
+                                            <constraint firstAttribute="height" constant="44" id="8yC-CD-Wff"/>
+                                        </constraints>
+                                        <state key="normal" image="reset"/>
                                         <connections>
                                             <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Eux-Ci-G1z"/>
                                         </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="8N2-AP-Roz" firstAttribute="top" secondItem="Dyr-Hl-36I" secondAttribute="top" id="4GR-zV-mDR"/>
-                                    <constraint firstAttribute="bottom" secondItem="tzG-Do-kC4" secondAttribute="bottom" id="Cpi-dm-lMB"/>
+                                    <constraint firstItem="JwQ-MU-sYs" firstAttribute="top" secondItem="Dyr-Hl-36I" secondAttribute="top" id="0dy-l5-0u0"/>
+                                    <constraint firstItem="tzG-Do-kC4" firstAttribute="top" secondItem="Dyr-Hl-36I" secondAttribute="top" id="92y-yE-aeR"/>
                                     <constraint firstAttribute="height" constant="44" id="Cso-p8-F1p"/>
-                                    <constraint firstItem="tzG-Do-kC4" firstAttribute="top" secondItem="Dyr-Hl-36I" secondAttribute="top" id="Ghk-ek-KKb"/>
-                                    <constraint firstItem="8N2-AP-Roz" firstAttribute="leading" secondItem="Dyr-Hl-36I" secondAttribute="leading" id="M50-Mg-C0Y"/>
-                                    <constraint firstAttribute="bottom" secondItem="8N2-AP-Roz" secondAttribute="bottom" id="Rbi-pl-j7H"/>
+                                    <constraint firstAttribute="bottom" secondItem="JwQ-MU-sYs" secondAttribute="bottom" id="Ez4-FB-cft"/>
+                                    <constraint firstAttribute="trailing" secondItem="tzG-Do-kC4" secondAttribute="trailing" id="Gzt-0s-63L"/>
+                                    <constraint firstItem="JwQ-MU-sYs" firstAttribute="centerX" secondItem="Dyr-Hl-36I" secondAttribute="centerX" id="T3k-Ke-sR6"/>
+                                    <constraint firstAttribute="bottom" secondItem="tzG-Do-kC4" secondAttribute="bottom" id="XKt-Wd-lKL"/>
                                     <constraint firstAttribute="width" constant="285" id="Zb6-Nd-pO9"/>
-                                    <constraint firstAttribute="trailing" secondItem="tzG-Do-kC4" secondAttribute="trailing" id="cfl-yO-C8k"/>
-                                    <constraint firstAttribute="trailing" secondItem="tzG-Do-kC4" secondAttribute="trailing" id="rbL-PT-VDG"/>
+                                    <constraint firstAttribute="bottom" secondItem="8N2-AP-Roz" secondAttribute="bottom" id="gVJ-38-KRh"/>
+                                    <constraint firstItem="8N2-AP-Roz" firstAttribute="top" secondItem="Dyr-Hl-36I" secondAttribute="top" id="qZW-tG-UmR"/>
+                                    <constraint firstItem="8N2-AP-Roz" firstAttribute="leading" secondItem="Dyr-Hl-36I" secondAttribute="leading" id="rcQ-oC-COs"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -101,4 +96,9 @@
             <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="load" width="500" height="250"/>
+        <image name="reset" width="500" height="250"/>
+        <image name="save" width="500" height="250"/>
+    </resources>
 </document>
