--- a/the-hunt-2.0/Base.lproj/Main.storyboard
+++ b/the-hunt-2.0/Base.lproj/Main.storyboard
@@ -72,13 +72,33 @@
                                     <constraint firstItem="8N2-AP-Roz" firstAttribute="leading" secondItem="Dyr-Hl-36I" secondAttribute="leading" id="rcQ-oC-COs"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhz-jB-275" userLabel="Undo Button">
+                                <rect key="frame" x="284" y="20" width="75" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="QX5-qH-d9j"/>
+                                    <constraint firstAttribute="width" constant="75" id="cPt-Bx-bPg"/>
+                                </constraints>
+                                <state key="normal" image="undo"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bvR-34-V8m">
+                                <rect key="frame" x="16" y="20" width="90" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="tYM-tq-nPf"/>
+                                    <constraint firstAttribute="height" constant="40" id="xtv-ly-UPh"/>
+                                </constraints>
+                                <state key="normal" image="thehunt"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="bvR-34-V8m" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="1RI-Pe-moE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uhz-jB-275" secondAttribute="trailing" constant="16" id="4hx-Nd-eBd"/>
                             <constraint firstItem="vcq-0e-sX9" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8Hi-WI-XFN"/>
                             <constraint firstItem="vcq-0e-sX9" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="I7v-im-8gM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Dyr-Hl-36I" secondAttribute="bottom" constant="20" id="J2L-gS-O6A"/>
+                            <constraint firstItem="bvR-34-V8m" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RsE-eT-hfr"/>
                             <constraint firstItem="vcq-0e-sX9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="YhV-6a-Iqp"/>
+                            <constraint firstItem="uhz-jB-275" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="aF1-Dr-bZy"/>
                             <constraint firstItem="Dyr-Hl-36I" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="b0P-gE-bV7"/>
                             <constraint firstItem="vcq-0e-sX9" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="kp1-nu-irF"/>
                         </constraints>
@@ -100,5 +120,7 @@
         <image name="load" width="500" height="250"/>
         <image name="reset" width="500" height="250"/>
         <image name="save" width="500" height="250"/>
+        <image name="thehunt" width="500" height="250"/>
+        <image name="undo" width="500" height="250"/>
     </resources>
 </document>
