--- a/the-hunt-2.0/Base.lproj/Main.storyboard
+++ b/the-hunt-2.0/Base.lproj/Main.storyboard
@@ -79,6 +79,9 @@
                                     <constraint firstAttribute="width" constant="75" id="cPt-Bx-bPg"/>
                                 </constraints>
                                 <state key="normal" image="undo"/>
+                                <connections>
+                                    <action selector="onUndoPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uuY-T6-ya2"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bvR-34-V8m">
                                 <rect key="frame" x="16" y="20" width="90" height="40"/>
