--- a/the-hunt-2.0/Base.lproj/Main.storyboard
+++ b/the-hunt-2.0/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="TreasureRegular.ttf">
+            <string>TreasureMapDeadhand</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -98,6 +103,19 @@
                                 <rect key="frame" x="172" y="30" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="RMV-bW-qD4">
+                                <rect key="frame" x="67" y="93" width="255" height="430"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.72376665609137059" green="0.63027283600206907" blue="0.40730886590104282" alpha="0.90715967465753422" colorSpace="custom" customColorSpace="displayP3"/>
+                                <string key="text">Welcome to The Hunt! 
+ Here is your guide to becoming a Tresure HuntARRRRRR.     
+1. Move your phone around to help map the room. 
+2. Tap phone to place a point and write a hint! 
+ 3. Shake phone to see menu where you can save, load and reset your ScavengAR Hunt.</string>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" name="TreasureMapDeadhand" family="Treasure Map Deadhand" pointSize="21"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
